Info page + minor fixes
added information popup page and fixed svgs not showing on build

--- a/src/assets/css/popups.css
+++ b/src/assets/css/popups.css
@@ -134,3 +134,41 @@
     width: 64px;
     height: 64px;
 }
+
+/* Info Page */
+.info-popup-container {
+    position: absolute;
+    top: 15%;
+    left: 25%;
+    padding: 20px;
+    z-index: 15;
+    width: 800px;
+    background: white;
+    border-radius: 8px;
+}
+
+.info-container {
+    overflow-y: auto;
+    max-height: 500px;
+}
+
+.content-container {
+    color: #2D527C;
+    margin-bottom: 20px;
+}
+
+.content-title {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.text {
+    font-size: 18px;
+    font-weight: bold;
+    margin-left: 30px;
+}
+
+.close-button {
+    display: block;
+    margin: 0 auto;
+}
